log
vi., 13 de may. de 2022 17:30:26: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
579fe58
vi., 13 de may. de 2022 17:40:29: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:21: error: invalid initializer
     int filaAux[10]=0;
                     ^
sudoku.c:59:22: error: invalid initializer
     int columAux[10]=0;
                      ^
Compilation failed
560d4f9
vi., 13 de may. de 2022 17:41:01: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
b715e81
do., 15 de may. de 2022 20:47:42: 
 sudoku.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
99ed305
do., 15 de may. de 2022 20:57:00: 
 sudoku.c | 32 ++++++++++++++++++++++++--------
 1 file changed, 24 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:122:17: error: passing argument 1 of 'is_final' from incompatible pointer type [-Werror=incompatible-pointer-types]
     if(is_final(aux)) return aux;
                 ^~~
sudoku.c:106:5: note: expected 'Node * {aka struct <anonymous> *}' but argument is of type 'Stack * {aka struct List *}'
 int is_final(Node* n){
     ^~~~~~~~
sudoku.c:122:30: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     if(is_final(aux)) return aux;
                              ^~~
sudoku.c:123:31: error: passing argument 1 of 'get_adj_nodes' from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* lista=get_adj_nodes(aux);
                               ^~~
sudoku.c:84:7: note: expected 'Node * {aka struct <anonymous> *}' but argument is of type 'Stack * {aka struct List *}'
 List* get_adj_nodes(Node* n){
       ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
98def7c
do., 15 de may. de 2022 20:59:13: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:122:17: error: passing argument 1 of 'is_final' from incompatible pointer type [-Werror=incompatible-pointer-types]
     if(is_final(aux)) return aux;
                 ^~~
sudoku.c:106:5: note: expected 'Node * {aka struct <anonymous> *}' but argument is of type 'Stack * {aka struct List *}'
 int is_final(Node* n){
     ^~~~~~~~
sudoku.c:122:30: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     if(is_final(aux)) return aux;
                              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
95ed47d
